[package]
name = "r5d3"
version = "0.2.6"
edition = "2021"
authors = ["LOU Xun <xun.lou@controlant.com>"]
description = "DNS automation for multi-account Route53 setup"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
fastrand = "2"

# AWS
control-aws = { git = "https://github.com/controlant-org/control-aws.git", rev = "b26c6b7" }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-route53 = "1"
aws-sdk-acm = "1"
aws-sdk-sts = "1"

# Runtime
tokio = { version = "1", features = ["full"] }

# Tracing
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.22"

# [patch.'https://github.com/controlant-org/control-aws']
# control-aws = { path = "../control-aws" }
